lib/common-music/sa/include/sa.h

EXPORT void _wrap_HammingTable_SetParam (HammingTable *larg1, long larg2, float larg3);
EXPORT char *_wrap_HammingTable_ErrorMessage (HammingTable *larg1);
EXPORT short _wrap_HammingTable_MakeTable (HammingTable *larg1);
EXPORT HammingTable *_wrap_new_HammingTable_empty ();
EXPORT HammingTable *_wrap_new_HammingTable (long larg1, float larg2);
EXPORT void _wrap_delete_HammingTable (HammingTable *larg1);
EXPORT void _wrap_NoteTable_SetFreqInterval (NoteTable *larg1, float larg2, float larg3);
EXPORT void _wrap_NoteTable_SetNoteInterval (NoteTable *larg1, short larg2, short larg3);
EXPORT NoteTable *_wrap_new_NoteTable_empty ();
EXPORT NoteTable *_wrap_new_NoteTable (short larg1, short larg2, float larg3, float larg4);
EXPORT void _wrap_delete_NoteTable (NoteTable *larg1);
EXPORT short _wrap_NoteTable_MakeTable (NoteTable *larg1);
EXPORT char *_wrap_NoteTable_ErrorMessage (NoteTable *larg1);
EXPORT void _wrap_UsrDefTable_SetTable (UsrDefTable *larg1, long larg2, float *larg3);
EXPORT char *_wrap_UsrDefTable_ErrorMessage (UsrDefTable *larg1);
EXPORT short _wrap_UsrDefTable_MakeTable (UsrDefTable *larg1);
EXPORT UsrDefTable *_wrap_new_UsrDefTable_empty ();
EXPORT UsrDefTable *_wrap_new_UsrDefTable (long larg1, float *larg2);
EXPORT void _wrap_delete_UsrDefTable (UsrDefTable *larg1);
EXPORT char *_wrap_LoPassTable_ErrorMessage (LoPassTable *larg1);
EXPORT short _wrap_LoPassTable_MakeTable (LoPassTable *larg1);
EXPORT void _wrap_LoPassTable_SetFreq (LoPassTable *larg1, float larg2);
EXPORT void _wrap_LoPassTable_SetSr (LoPassTable *larg1, float larg2);
EXPORT LoPassTable *_wrap_new_LoPassTable (int larg1, float larg2, float larg3);
EXPORT LoPassTable *_wrap_new_LoPassTable_empty ();
EXPORT void _wrap_delete_LoPassTable (LoPassTable *larg1);
EXPORT void _wrap_PVEnvTable_SetEnvelope (PVEnvTable *larg1, int larg2, float larg3, float *larg4, float *larg5, float larg6, float larg7);
EXPORT void _wrap_PVEnvTable_SetSr (PVEnvTable *larg1, float larg2);
EXPORT char *_wrap_PVEnvTable_ErrorMessage (PVEnvTable *larg1);
EXPORT short _wrap_PVEnvTable_MakeTable (PVEnvTable *larg1);
EXPORT PVEnvTable *_wrap_new_PVEnvTable_empty ();
EXPORT PVEnvTable *_wrap_new_PVEnvTable (long larg1, int larg2, float larg3, float *larg4, float *larg5, float larg6, float larg7, float larg8);
EXPORT void _wrap_delete_PVEnvTable (PVEnvTable *larg1);
EXPORT short _wrap_SpecEnvTable_MakeTable (SpecEnvTable *larg1);
EXPORT SpecEnvTable *_wrap_new_SpecEnvTable_empty ();
EXPORT SpecEnvTable *_wrap_new_SpecEnvTable (long larg1, int larg2, float larg3, float *larg4, float *larg5, float larg6, float larg7);
EXPORT void _wrap_delete_SpecEnvTable (SpecEnvTable *larg1);
EXPORT void _wrap_PVTable_SetTable (PVTable *larg1, SndFIO *larg2, Table *larg3, float larg4, float larg5);
EXPORT short _wrap_PVTable_MakeTable (PVTable *larg1);
EXPORT PVTable *_wrap_new_PVTable_empty ();
EXPORT PVTable *_wrap_new_PVTable (int larg1, SndFIO *larg2, Table *larg3, float larg4, float larg5);
EXPORT void _wrap_delete_PVTable (PVTable *larg1);
EXPORT char *_wrap_PVTable_ErrorMessage (PVTable *larg1);
EXPORT void _wrap_ImpulseTable_SetWindow (ImpulseTable *larg1, Table *larg2);
EXPORT short _wrap_ImpulseTable_MakeTable (ImpulseTable *larg1);
EXPORT ImpulseTable *_wrap_new_ImpulseTable_empty ();
EXPORT ImpulseTable *_wrap_new_ImpulseTable (long larg1, int larg2, float larg3, float *larg4, float *larg5, float larg6, Table *larg7, float larg8);
EXPORT void _wrap_delete_ImpulseTable (ImpulseTable *larg1);
///* sa_wrap.cpp */
//
EXPORT Acos *_wrap_new_Acos (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Acos (Acos *larg1);
EXPORT Asin *_wrap_new_Asin (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Asin (Asin *larg1);
EXPORT Atan *_wrap_new_Atan (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Atan (Atan *larg1);
EXPORT Atan2 *_wrap_new_Atan2 (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Atan2 (Atan2 *larg1);
EXPORT void _wrap_delete_Cos (Cos *larg1);
EXPORT Sin *_wrap_new_Sin (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Sin (Sin *larg1);
EXPORT Tan *_wrap_new_Tan (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Tan (Tan *larg1);
EXPORT Acosh *_wrap_new_Acosh (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Acosh (Acosh *larg1);
EXPORT Asinh *_wrap_new_Asinh (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Asinh (Asinh *larg1);
EXPORT Atanh *_wrap_new_Atanh (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Atanh (Atanh *larg1);
EXPORT Cosh *_wrap_new_Cosh (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Cosh (Cosh *larg1);
EXPORT Sinh *_wrap_new_Sinh (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Sinh (Sinh *larg1);
EXPORT Tanh *_wrap_new_Tanh (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Tanh (Tanh *larg1);
EXPORT Exp *_wrap_new_Exp (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Exp (Exp *larg1);
EXPORT Exp2 *_wrap_new_Exp2 (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Exp2 (Exp2 *larg1);
EXPORT Log *_wrap_new_Log (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Log (Log *larg1);
EXPORT Log10 *_wrap_new_Log10 (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Log10 (Log10 *larg1);
EXPORT Log2 *_wrap_new_Log2 (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Log2 (Log2 *larg1);
EXPORT Log1p *_wrap_new_Log1p (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Log1p (Log1p *larg1);
EXPORT Logb *_wrap_new_Logb (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Logb (Logb *larg1);
EXPORT Fabs *_wrap_new_Fabs (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Fabs (Fabs *larg1);
EXPORT Cbrt *_wrap_new_Cbrt (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Cbrt (Cbrt *larg1);
EXPORT Hypot *_wrap_new_Hypot (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Hypot (Hypot *larg1);
EXPORT Hypot *_wrap_new_Hypotf (SndObj *larg1, float larg2, int larg3, float larg4);
EXPORT Pow *_wrap_new_Pow (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Pow (Pow *larg1);
EXPORT Pow *_wrap_new_Powf (SndObj *larg1, float larg2, int larg3, float larg4);
EXPORT Sqrt *_wrap_new_Sqrt (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Sqrt (Sqrt *larg1);
EXPORT Ceil *_wrap_new_Ceil (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Ceil (Ceil *larg1);
EXPORT Floor *_wrap_new_Floor (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Floor (Floor *larg1);
EXPORT Fdim *_wrap_new_Fdim (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_Fdim (Fdim *larg1);
EXPORT Fmax *_wrap_new_Fmax (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Fmax (Fmax *larg1);
EXPORT Fmax *_wrap_new_Fmaxf (SndObj *larg1, float larg2, int larg3, float larg4);
EXPORT Fmin *_wrap_new_Fmin (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Fmin (Fmin *larg1);
EXPORT Fmin *_wrap_new_Fminf (SndObj *larg1, float larg2, int larg3, float larg4);
EXPORT Multiply *_wrap_new_Multiply (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Multiply (Multiply *larg1);
EXPORT Multiply *_wrap_new_Multiplyf (SndObj *larg1, float larg2, int larg3, float larg4);
EXPORT Divide *_wrap_new_Divide (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Divide (Divide *larg1);
EXPORT Divide *_wrap_new_Dividef (SndObj *larg1, float larg2, int larg3, float larg4);
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);