lib/common-music/sa/cffi-sa.lisp


(defcfun ("_wrap_HammingTable_SetParam" HammingTable_SetParam) :void
  (self :sndobj_hammingtable)
  (L :long)
  (alpha :float))

(defcfun ("_wrap_HammingTable_ErrorMessage" HammingTable_ErrorMessage) :string
  (self :sndobj_hammingtable))

(defcfun ("_wrap_HammingTable_MakeTable" HammingTable_MakeTable) :short
  (self :sndobj_hammingtable))

(defcfun ("_wrap_new_HammingTable_empty" new_HammingTable_empty) :sndobj_hammingtable)

(defcfun ("_wrap_new_HammingTable" new_HammingTable) :sndobj_hammingtable
  (L :long)
  (alpha :float))

(defcfun ("_wrap_delete_HammingTable" delete_HammingTable) :void
  (self :sndobj_hammingtable))

(defcfun ("_wrap_NoteTable_SetFreqInterval" NoteTable_SetFreqInterval) :void
  (self :sndobj_notetable)
  (lowerfreq :float)
  (upperfreq :float))

(defcfun ("_wrap_NoteTable_SetNoteInterval" NoteTable_SetNoteInterval) :void
  (self :sndobj_notetable)
  (lowernote :short)
  (uppernote :short))

(defcfun ("_wrap_new_NoteTable_empty" new_NoteTable_empty) :sndobj_notetable)

(defcfun ("_wrap_new_NoteTable" new_NoteTable) :sndobj_notetable
  (lowernote :short)
  (uppernote :short)
  (lowerfreq :float)
  (upperfreq :float))

(defcfun ("_wrap_delete_NoteTable" delete_NoteTable) :void
  (self :sndobj_notetable))

(defcfun ("_wrap_NoteTable_MakeTable" NoteTable_MakeTable) :short
  (self :sndobj_notetable))

(defcfun ("_wrap_NoteTable_ErrorMessage" NoteTable_ErrorMessage) :string
  (self :sndobj_notetable))

(defcfun ("_wrap_UsrDefTable_SetTable" UsrDefTable_SetTable) :void
  (self :sndobj_usrdeftable)
  (L :long)
  (values :float*))

(defcfun ("_wrap_UsrDefTable_ErrorMessage" UsrDefTable_ErrorMessage) :string
  (self :sndobj_usrdeftable))

(defcfun ("_wrap_UsrDefTable_MakeTable" UsrDefTable_MakeTable) :short
  (self :sndobj_usrdeftable))

(defcfun ("_wrap_new_UsrDefTable_empty" new_UsrDefTable_empty) :sndobj_usrdeftable)

(defcfun ("_wrap_new_UsrDefTable" new_UsrDefTable) :sndobj_usrdeftable
  (L :long)
  (values :float*))

(defcfun ("_wrap_delete_UsrDefTable" delete_UsrDefTable) :void
  (self :sndobj_usrdeftable))

(defcfun ("_wrap_LoPassTable_ErrorMessage" LoPassTable_ErrorMessage) :string
  (self :sndobj_lopasstable))

(defcfun ("_wrap_LoPassTable_MakeTable" LoPassTable_MakeTable) :short
  (self :sndobj_lopasstable))

(defcfun ("_wrap_LoPassTable_SetFreq" LoPassTable_SetFreq) :void
  (self :sndobj_lopasstable)
  (fr :float))

(defcfun ("_wrap_LoPassTable_SetSr" LoPassTable_SetSr) :void
  (self :sndobj_lopasstable)
  (sr :float))

(defcfun ("_wrap_new_LoPassTable" new_LoPassTable) :sndobj_lopasstable
  (impulsesize :int)
  (fr :float)
  (sr :float))

(defcfun ("_wrap_new_LoPassTable_empty" new_LoPassTable_empty) :sndobj_lopasstable)

(defcfun ("_wrap_delete_LoPassTable" delete_LoPassTable) :void
  (self :sndobj_lopasstable))

(defcfun ("_wrap_PVEnvTable_SetEnvelope" PVEnvTable_SetEnvelope) :void
  (self :sndobj_pvenvtable)
  (segments :int)
  (start :float)
  (points :float*)
  (lengths :float*)
  (type :float)
  (nyquistamp :float))

(defcfun ("_wrap_PVEnvTable_SetSr" PVEnvTable_SetSr) :void
  (self :sndobj_pvenvtable)
  (sr :float))

(defcfun ("_wrap_PVEnvTable_ErrorMessage" PVEnvTable_ErrorMessage) :string
  (self :sndobj_pvenvtable))

(defcfun ("_wrap_PVEnvTable_MakeTable" PVEnvTable_MakeTable) :short
  (self :sndobj_pvenvtable))

(defcfun ("_wrap_new_PVEnvTable_empty" new_PVEnvTable_empty) :sndobj_pvenvtable)

(defcfun ("_wrap_new_PVEnvTable" new_PVEnvTable) :sndobj_pvenvtable
  (L :long)
  (segments :int)
  (start :float)
  (points :float*)
  (lengths :float*)
  (type :float)
  (sr :float)
  (nyquistamp :float))

(defcfun ("_wrap_delete_PVEnvTable" delete_PVEnvTable) :void
  (self :sndobj_pvenvtable))

(defcfun ("_wrap_SpecEnvTable_MakeTable" SpecEnvTable_MakeTable) :short
  (self :sndobj_specenvtable))

(defcfun ("_wrap_new_SpecEnvTable_empty" new_SpecEnvTable_empty) :sndobj_specenvtable)

(defcfun ("_wrap_new_SpecEnvTable" new_SpecEnvTable) :sndobj_specenvtable
  (L :long)
  (segments :int)
  (start :float)
  (points :float*)
  (lengths :float*)
  (type :float)
  (nyquistamp :float))

(defcfun ("_wrap_delete_SpecEnvTable" delete_SpecEnvTable) :void
  (self :sndobj_specenvtable))

(defcfun ("_wrap_PVTable_SetTable" PVTable_SetTable) :void
  (self :sndobj_pvtable)
  (soundfile :sndobj_sndfio)
  (window :sndobj_table)
  (start :float)
  (end :float))

(defcfun ("_wrap_PVTable_MakeTable" PVTable_MakeTable) :short
  (self :sndobj_pvtable))

(defcfun ("_wrap_new_PVTable_empty" new_PVTable_empty) :sndobj_pvtable)

(defcfun ("_wrap_new_PVTable" new_PVTable) :sndobj_pvtable
  (L :int)
  (soundfile :sndobj_sndfio)
  (window :sndobj_table)
  (start :float)
  (end :float))

(defcfun ("_wrap_delete_PVTable" delete_PVTable) :void
  (self :sndobj_pvtable))

(defcfun ("_wrap_PVTable_ErrorMessage" PVTable_ErrorMessage) :string
  (self :sndobj_pvtable))

(defcfun ("_wrap_ImpulseTable_SetWindow" ImpulseTable_SetWindow) :void
  (self :sndobj_impulsetable)
  (window :sndobj_table))

(defcfun ("_wrap_ImpulseTable_MakeTable" ImpulseTable_MakeTable) :short
  (self :sndobj_impulsetable))

(defcfun ("_wrap_new_ImpulseTable_empty" new_ImpulseTable_empty) :sndobj_impulsetable)

(defcfun ("_wrap_new_ImpulseTable" new_ImpulseTable) :sndobj_impulsetable
  (L :long)
  (segments :int)
  (start :float)
  (points :float*)
  (lengths :float*)
  (type :float)
  (window :sndobj_table)
  (nyquistamp :float))

(defcfun ("_wrap_delete_ImpulseTable" delete_ImpulseTable) :void
  (self :sndobj_impulsetable))



(defcfun ("_wrap_new_Acos" new_Acos) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Acos" delete_Acos) :void
  (self :pointer))

(defcfun ("_wrap_new_Asin" new_Asin) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Asin" delete_Asin) :void
  (self :pointer))

(defcfun ("_wrap_new_Atan" new_Atan) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Atan" delete_Atan) :void
  (self :pointer))

(defcfun ("_wrap_new_Atan2" new_Atan2) :pointer
  (input :pointer)
  (input2 :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Atan2" delete_Atan2) :void
  (self :pointer))

(defcfun ("_wrap_new_Cos" new_Cos) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Cos" delete_Cos) :void
  (self :pointer))

(defcfun ("_wrap_new_Sin" new_Sin) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Sin" delete_Sin) :void
  (self :pointer))

(defcfun ("_wrap_new_Tan" new_Tan) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Tan" delete_Tan) :void
  (self :pointer))

(defcfun ("_wrap_new_Acosh" new_Acosh) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Acosh" delete_Acosh) :void
  (self :pointer))

(defcfun ("_wrap_new_Asinh" new_Asinh) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Asinh" delete_Asinh) :void
  (self :pointer))

(defcfun ("_wrap_new_Atanh" new_Atanh) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Atanh" delete_Atanh) :void
  (self :pointer))

(defcfun ("_wrap_new_Cosh" new_Cosh) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Cosh" delete_Cosh) :void
  (self :pointer))

(defcfun ("_wrap_new_Sinh" new_Sinh) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Sinh" delete_Sinh) :void
  (self :pointer))

(defcfun ("_wrap_new_Tanh" new_Tanh) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Tanh" delete_Tanh) :void
  (self :pointer))

(defcfun ("_wrap_new_Exp" new_Exp) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Exp" delete_Exp) :void
  (self :pointer))

(defcfun ("_wrap_new_Exp2" new_Exp2) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Exp2" delete_Exp2) :void
  (self :pointer))

(defcfun ("_wrap_new_Expm1" new_Expm1) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Expm1" delete_Expm1) :void
  (self :pointer))

(defcfun ("_wrap_new_Log" new_Log) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Log" delete_Log) :void
  (self :pointer))

(defcfun ("_wrap_new_Log10" new_Log10) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Log10" delete_Log10) :void
  (self :pointer))

(defcfun ("_wrap_new_Log2" new_Log2) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Log2" delete_Log2) :void
  (self :pointer))

(defcfun ("_wrap_new_Log1p" new_Log1p) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Log1p" delete_Log1p) :void
  (self :pointer))

(defcfun ("_wrap_new_Logb" new_Logb) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Logb" delete_Logb) :void
  (self :pointer))

(defcfun ("_wrap_new_Fabs" new_Fabs) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Fabs" delete_Fabs) :void
  (self :pointer))

(defcfun ("_wrap_new_Cbrt" new_Cbrt) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Cbrt" delete_Cbrt) :void
  (self :pointer))

(defcfun ("_wrap_new_Hypot" new_Hypot) :pointer
  (input :pointer)
  (input2 :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Hypotf" new_Hypotf) :pointer
  (input :pointer)
  (input2 :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Hypot" delete_Hypot) :void
  (self :pointer))

(defcfun ("_wrap_new_Pow" new_Pow) :pointer
  (input :pointer)
  (input2 :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Powf" new_Powf) :pointer
  (input :pointer)
  (input2 :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Pow" delete_Pow) :void
  (self :pointer))

(defcfun ("_wrap_new_Sqrt" new_Sqrt) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Sqrt" delete_Sqrt) :void
  (self :pointer))

(defcfun ("_wrap_new_Ceil" new_Ceil) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Ceil" delete_Ceil) :void
  (self :pointer))

(defcfun ("_wrap_new_Floor" new_Floor) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Floor" delete_Floor) :void
  (self :pointer))

(defcfun ("_wrap_new_Fdim" new_Fdim) :pointer
  (input :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Fdim" delete_Fdim) :void
  (self :pointer))

(defcfun ("_wrap_new_Fmax" new_Fmax) :pointer
  (input :pointer)
  (input2 :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Fmaxf" new_Fmaxf) :pointer
  (input :pointer)
  (input2 :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Fmax" delete_Fmax) :void
  (self :pointer))

(defcfun ("_wrap_new_Fmin" new_Fmin) :pointer
  (input :pointer)
  (input2 :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Fminf" new_Fminf) :pointer
  (input :pointer)
  (input2 :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Fmin" delete_Fmin) :void
  (self :pointer))

(defcfun ("_wrap_new_Multiply" new_Multiply) :pointer
  (input :pointer)
  (input2 :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Multiplyf" new_Multiplyf) :pointer
  (input :pointer)
  (input2 :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Multiply" delete_Multiply) :void
  (self :pointer))

(defcfun ("_wrap_new_Divide" new_Divide) :pointer
  (input :pointer)
  (input2 :pointer)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_Dividef" new_Dividef) :pointer
  (input :pointer)
  (input2 :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Divide" delete_Divide) :void
  (self :pointer))
